<resources>
    <string name="app_name">Hike Mate</string>
    <string name="title_activity_maps">Map</string>
    <string name="photo">photo</string>
    <string name="Alert">GrayScale Value</string>
    <string name="Ok">OK</string>
    <string name="infoPhoto">Zrób zdjęcie z oznaczeniem szlaku znajdującym się wewnątrz czerwonej obramówki.</string>
    <string name="infoLista">Wybierz kolor szlaku z listy</string>
    <string name="info">Wciśnij jeden z poniższych przycisków</string>
    <string name="red">Czerwony</string>
    <string name="blue">Niebieski</string>
    <string name="green">Zielony</string>
    <string name="yellow">Żółty</string>
    <string name="black">Czarny</string>
    <string name="chooseColor">Wybierz kolor szlaku</string>
    <string name="back">Wstecz</string>
    <string name="capture">Zrób zdjęcie</string>
    <string name="title_activity_final">FinalActivity</string>
    <string name="youreCurrentlyOnRoute">Aktualnie znajdujesz się na %1$s</string>
    <string name="fullRouteLength">Długość całego szlaku: %1$s km.</string>
    <string name="altitudeDiff">Przewyższenie szlaku: %1$s m.</string>
    <string name="showMap">Wyświetl mapę</string>
    <string name="showAltitude">Wyświetl profil wysokościowy</string>
    <string name="routeNotFound">W miejscu, w którym się znajdujesz nie odnaleziono szlaku o odpowiadającym kolorze.</string>
    <string name="backToLauncher">Wróć do ekranu startowego</string>
    <string name="BKartuski.plt">niebieskim szlaku Kartuskim.</string>
    <string name="CDomowPodcienianych.plt">czarnym szlaku Domów Podcieniowych.</string>
    <string name="CWiezaKolibkowska.plt">czarnym szlaku Wieży Kolibkowskiej.</string>
    <string name="CWzgorzSzymbarskich.plt">czarnym szlaku Wzgórz Szymbarskich.</string>
    <string name="CZagorskiejStrogi.plt">czarnym szlaku Zagórskiej Strógi.</string>
    <string name="CZrodlaMarii.plt">czarnym szlaku źródła Marii.</string>
    <string name="GSkarszewski.plt">zielonym szlaku Skarszewskim.</string>
    <string name="GWyspySobieszewskiej.plt">zielonym szlaku Wyspy Sobieszewskiej.</string>
    <string name="RFortyfikacjiNadmorskich.plt">czerwonym szlaku Fortyfikacji Nadmorskich.</string>
    <string name="RMotlawski.plt">czerwonym szlaku Motławskim.</string>
    <string name="RWejherowski.plt">czerwonym szlaku Wejherowskim.</string>
    <string name="YBursztynowy.plt">żółtym szlaku Bursztynowym.</string>
    <string name="YKepyRedlowskiej.plt">żółtym szlaku Kępy Redłowskiej.</string>
    <string name="YTrojmiejski.plt">żółtym szlaku Trójmiejskim.</string>
</resources>